change path for spoke-and-bird
makes it so i can just look like i'm using a slug instead of .html

--- a/r/spoke-and-bird/index.html
+++ b/r/spoke-and-bird/index.html
@@ -10,24 +10,24 @@
 <title>Shelter-In-Plates: Help keep local restaurants alive while supporting health care professionals</title>
 
 <!-- Favicons -->
-<link rel="shortcut icon" href="assets/img/favicon.png">
-<link rel="apple-touch-icon" href="assets/img/favicon_60x60.png">
-<link rel="apple-touch-icon" sizes="76x76" href="assets/img/favicon_76x76.png">
-<link rel="apple-touch-icon" sizes="120x120" href="assets/img/favicon_120x120.png">
-<link rel="apple-touch-icon" sizes="152x152" href="assets/img/favicon_152x152.png">
+<link rel="shortcut icon" href="../../assets/img/favicon.png">
+<link rel="apple-touch-icon" href="../../assets/img/favicon_60x60.png">
+<link rel="apple-touch-icon" sizes="76x76" href="../../assets/img/favicon_76x76.png">
+<link rel="apple-touch-icon" sizes="120x120" href="../../assets/img/favicon_120x120.png">
+<link rel="apple-touch-icon" sizes="152x152" href="../../assets/img/favicon_152x152.png">
 
 <!-- CSS Plugins -->
-<link rel="stylesheet" href="assets/plugins/bootstrap/dist/css/bootstrap.min.css" />
-<link rel="stylesheet" href="assets/plugins/slick-carousel/slick/slick.css" />
-<link rel="stylesheet" href="assets/plugins/animate.css/animate.min.css" />
-<link rel="stylesheet" href="assets/plugins/animsition/dist/css/animsition.min.css" />
+<link rel="stylesheet" href="../../assets/plugins/bootstrap/dist/css/bootstrap.min.css" />
+<link rel="stylesheet" href="../../assets/plugins/slick-carousel/slick/slick.css" />
+<link rel="stylesheet" href="../../assets/plugins/animate.css/animate.min.css" />
+<link rel="stylesheet" href="../../assets/plugins/animsition/dist/css/animsition.min.css" />
 
 <!-- CSS Icons -->
-<link rel="stylesheet" href="assets/css/themify-icons.css" />
-<link rel="stylesheet" href="assets/plugins/font-awesome/css/font-awesome.min.css" />
+<link rel="stylesheet" href="../../assets/css/themify-icons.css" />
+<link rel="stylesheet" href="../../assets/plugins/font-awesome/css/font-awesome.min.css" />
 
 <!-- CSS Theme -->
-<link id="theme" rel="stylesheet" href="assets/css/themes/theme-beige.min.css" />
+<link id="theme" rel="stylesheet" href="../../assets/css/themes/theme-beige.min.css" />
 
 </head>
 
@@ -44,16 +44,16 @@
                 <div class="col-md-3">
                     <!-- Logo -->
                     <div class="module module-logo dark">
-                        <img src="assets/img/logo-light.svg" alt="" width="88">
+                        <img src="../../assets/img/logo-light.svg" alt="" width="88">
                     </div>
                 </div>
                 <div class="col-md-7">
                     <!-- Navigation -->
                     <nav class="module module-navigation left mr-4">
                         <ul id="nav-main" class="nav nav-main">
-                            <li><a href="index.html">Home</a></li>
-                            <li><a href="learn-more.html">Restaurants: Learn More</a></li>
-                            <li><a href="help-out.html">Diners: Help Out</a></li>
+                            <li><a href="../../index.html">Home</a></li>
+                            <li><a href="../../learn-more.html">Restaurants: Learn More</a></li>
+                            <li><a href="../../help-out.html">Diners: Help Out</a></li>
                         </ul>
                     </nav>
                 </div>
@@ -75,7 +75,7 @@
         </div>
 
         <div class="module module-logo">
-            <img src="assets/img/logo-horizontal-dark.svg" alt="">
+            <img src="../../assets/img/logo-horizontal-dark.svg" alt="">
         </div>
 
     </header>
@@ -86,7 +86,7 @@
 
         <!-- Page Title -->
         <div class="page-title bg-dark dark">
-            <div class="bg-image bg-parallax"><img src="assets/img/photos/bg-croissant.jpg" alt=""></div>
+            <div class="bg-image bg-parallax"><img src="../../assets/img/photos/bg-croissant.jpg" alt=""></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 push-lg-4">
@@ -106,7 +106,7 @@
                         <div id="Burgers" class="menu-category">
                             <div class="restaurant-page-message row">
                                 <div class="col-md-3">
-                                    <img class="img-thumbnail" src="assets/img/restaurants/spoke-and-bird.png" />
+                                    <img class="img-thumbnail" src="../../assets/img/restaurants/spoke-and-bird.png" />
                                 </div>
                                 <div class="col-md-9">
                                     <p>
@@ -129,7 +129,7 @@
                                     <div class="col-lg-4 col-6">
                                         <!-- Menu Item -->
                                         <div class="menu-item menu-grid-item">
-                                            <img class="mb-4" src="assets/img/products/product-burger.jpg" alt="">
+                                            <img class="mb-4" src="../../assets/img/products/product-burger.jpg" alt="">
                                             <h6 class="mb-2">Buy a meal for a healthcare worker: Once</h6>
                                             <span class="text-muted text-sm">We'll deliver a healthy, nourishing meal to hospital healthcare worker in Chicago on your behalf.</span>
                                             <div class="row align-items-center mt-4">
@@ -141,7 +141,7 @@
                                     <div class="col-lg-4 col-6">
                                         <!-- Menu Item -->
                                         <div class="menu-item menu-grid-item">
-                                            <img class="mb-4" src="assets/img/products/product-chicken-burger.jpg" alt="">
+                                            <img class="mb-4" src="../../assets/img/products/product-chicken-burger.jpg" alt="">
                                             <h6 class="mb-2">Buy a meal for a healthcare worker: Weekly</h6>
                                             <span class="text-muted text-sm">We'll deliver a healthy, nourishing meal to hospital healthcare worker in Chicago on your behalf.</span>
                                             <div class="row align-items-center mt-4">
@@ -169,7 +169,7 @@ When making your purchase, please include a message for the hospital staff, your
                                   </ul>
                                 </p>
                                 <h6>Scott, Owner</h6>
-                                <img src="assets/img/svg/sign.svg" alt="" class="mb-5">
+                                <img src="../../assets/img/svg/sign.svg" alt="" class="mb-5">
                             </div>
                         </div>
                     </div>
@@ -184,7 +184,7 @@ When making your purchase, please include a message for the hospital staff, your
             <!-- Footer 1st Row -->
             <div class="row align-items-center pt-2 pb-2">
                 <div class="col-lg-2 text-center text-lg-left pt-2 pb-2">
-                    <a href="index.html"><img src="assets/img/logo-light.svg" alt="" width="40"></a>
+                    <a href="../../index.html"><img src="../../assets/img/logo-light.svg" alt="" width="40"></a>
                 </div>
                 <div class="col-lg-10 col-md-12 text-center text-lg-right pt-2 pb-2">
                     <div>Made with ❤️ in Chicago</div>
@@ -202,7 +202,7 @@ When making your purchase, please include a message for the hospital staff, your
     <nav id="panel-mobile">
         <div class="module module-logo bg-dark dark">
             <a href="#">
-                <img src="assets/img/logo-light.svg" alt="" width="88">
+                <img src="../../assets/img/logo-light.svg" alt="" width="88">
             </a>
             <button class="close" data-toggle="panel-mobile"><i class="ti ti-close"></i></button>
         </div>
@@ -219,7 +219,7 @@ When making your purchase, please include a message for the hospital staff, your
     <div class="modal-dialog" role="document">
         <div class="modal-content">
             <div class="modal-header modal-header-lg dark bg-dark">
-                <div class="bg-image"><img src="assets/img/photos/modal-add.jpg" alt=""></div>
+                <div class="bg-image"><img src="../../assets/img/photos/modal-add.jpg" alt=""></div>
                 <h4 class="modal-title">Buy A Meal For A Healthcare Hero</h4>
                 <button type="button" class="close" data-dismiss="modal" aria-label="Close"><i class="ti-close"></i></button>
             </div>
@@ -283,21 +283,21 @@ When making your purchase, please include a message for the hospital staff, your
 </div>
 
 <!-- JS Plugins -->
-<script src="assets/plugins/jquery/dist/jquery.min.js"></script>
-<script src="assets/plugins/tether/dist/js/tether.min.js"></script>
-<script src="assets/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-<script src="assets/plugins/slick-carousel/slick/slick.min.js"></script>
-<script src="assets/plugins/jquery.appear/jquery.appear.js"></script>
-<script src="assets/plugins/jquery.scrollto/jquery.scrollTo.min.js"></script>
-<script src="assets/plugins/jquery.localscroll/jquery.localScroll.min.js"></script>
-<script src="assets/plugins/jquery-validation/dist/jquery.validate.min.js"></script>
-<script src="assets/plugins/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.min.js"></script>
-<script src="assets/plugins/twitter-fetcher/js/twitterFetcher_min.js"></script>
-<script src="assets/plugins/skrollr/dist/skrollr.min.js"></script>
-<script src="assets/plugins/animsition/dist/js/animsition.min.js"></script>
+<script src="../../assets/plugins/jquery/dist/jquery.min.js"></script>
+<script src="../../assets/plugins/tether/dist/js/tether.min.js"></script>
+<script src="../../assets/plugins/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="../../assets/plugins/slick-carousel/slick/slick.min.js"></script>
+<script src="../../assets/plugins/jquery.appear/jquery.appear.js"></script>
+<script src="../../assets/plugins/jquery.scrollto/jquery.scrollTo.min.js"></script>
+<script src="../../assets/plugins/jquery.localscroll/jquery.localScroll.min.js"></script>
+<script src="../../assets/plugins/jquery-validation/dist/jquery.validate.min.js"></script>
+<script src="../../assets/plugins/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.min.js"></script>
+<script src="../../assets/plugins/twitter-fetcher/js/twitterFetcher_min.js"></script>
+<script src="../../assets/plugins/skrollr/dist/skrollr.min.js"></script>
+<script src="../../assets/plugins/animsition/dist/js/animsition.min.js"></script>
 
 <!-- JS Core -->
-<script src="assets/js/core.js"></script>
+<script src="../../assets/js/core.js"></script>
 
 <script>
     (function() {
@@ -362,7 +362,7 @@ When making your purchase, please include a message for the hospital staff, your
           // Instead use one of the strategies described in
           // https://stripe.com/docs/payments/checkout/fulfillment
           successUrl: 'http://www.shelter-in-plates.com/confirmation.html',
-          cancelUrl: 'https://www.shelter-in-plates.com/spoke-and-bird.html',
+          cancelUrl: 'https://www.shelter-in-plates.com/r/spoke-and-bird/',
           // successUrl: 'http://localhost:8082/confirmation.html',
           // cancelUrl: 'http://localhost:8082/sample-page.html',
         }
