update spoke and bird images

--- a/r/spoke-and-bird/index.html
+++ b/r/spoke-and-bird/index.html
@@ -106,7 +106,7 @@
                         <div id="Burgers" class="menu-category">
                             <div class="restaurant-page-message row">
                                 <div class="col-md-3">
-                                    <img class="img-thumbnail" src="../../assets/img/restaurants/spoke-and-bird.png" />
+                                    <img class="img-thumbnail" src="../../assets/img/restaurants/spoke-and-bird/logo.png" />
                                 </div>
                                 <div class="col-md-9">
                                     <p>
@@ -129,7 +129,7 @@
                                     <div class="col-lg-4 col-6">
                                         <!-- Menu Item -->
                                         <div class="menu-item menu-grid-item">
-                                            <img class="mb-4" src="../../assets/img/products/product-burger.jpg" alt="">
+                                            <img class="mb-4" src="../../assets/img/restaurants/spoke-and-bird/spoke-and-bird-1.png" alt="">
                                             <h6 class="mb-2">Buy a meal for a healthcare worker: Once</h6>
                                             <span class="text-muted text-sm">We'll deliver a healthy, nourishing meal to hospital healthcare worker in Chicago on your behalf.</span>
                                             <div class="row align-items-center mt-4">
@@ -141,7 +141,7 @@
                                     <div class="col-lg-4 col-6">
                                         <!-- Menu Item -->
                                         <div class="menu-item menu-grid-item">
-                                            <img class="mb-4" src="../../assets/img/products/product-chicken-burger.jpg" alt="">
+                                            <img class="mb-4" src="../../assets/img/restaurants/spoke-and-bird/spoke-and-bird-2.png" alt="">
                                             <h6 class="mb-2">Buy a meal for a healthcare worker: Weekly</h6>
                                             <span class="text-muted text-sm">We'll deliver a healthy, nourishing meal to hospital healthcare worker in Chicago on your behalf.</span>
                                             <div class="row align-items-center mt-4">
