--- a/r/irazu/index.html
+++ b/r/irazu/index.html
@@ -86,7 +86,7 @@
 
         <!-- Page Title -->
         <div class="page-title bg-dark dark">
-            <div class="bg-image bg-parallax"><img src="../../assets/img/photos/bg-croissant.jpg" alt=""></div>
+            <div class="bg-image bg-parallax"><img src="../../assets/img/restaurants/irazu/irazu-background.png" alt=""></div>
             <div class="container">
                 <div class="row">
                     <div class="col-lg-8 push-lg-4">
