update titles for sharing

--- a/r/irazu/index.html
+++ b/r/irazu/index.html
@@ -7,7 +7,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 
 <!-- Title -->
-<title>Shelter-In-Plates: Help keep local restaurants alive while supporting health care professionals</title>
+<title>Irazu & Shelter-In-Plates: Join us in feeding the front line!</title>
 
 <!-- Favicons -->
 <link rel="shortcut icon" href="../../assets/img/favicon.png">
