--- a/shelter-in-plates/public/index.html
+++ b/shelter-in-plates/public/index.html
@@ -10,28 +10,28 @@
     <title>Shelter-In-Plates: Help keep local restaurants alive while supporting health care professionals</title>
 
     <!-- Favicons -->
-    <link rel="shortcut icon" href="img/favicon.png">
-    <link rel="apple-touch-icon" href="img/favicon_60x60.png">
-    <link rel="apple-touch-icon" sizes="76x76" href="img/favicon_76x76.png">
-    <link rel="apple-touch-icon" sizes="120x120" href="img/favicon_120x120.png">
-    <link rel="apple-touch-icon" sizes="152x152" href="img/favicon_152x152.png">
+    <link rel="shortcut icon" href="<%= BASE_URL %>img/favicon.png">
+    <link rel="apple-touch-icon" href="<%= BASE_URL %>img/favicon_60x60.png">
+    <link rel="apple-touch-icon" sizes="76x76" href="<%= BASE_URL %>img/favicon_76x76.png">
+    <link rel="apple-touch-icon" sizes="120x120" href="<%= BASE_URL %>img/favicon_120x120.png">
+    <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>img/favicon_152x152.png">
 
     <!-- CSS Plugins -->
-    <link rel="stylesheet" href="plugins/bootstrap/dist/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="plugins/slick-carousel/slick/slick.css" />
-    <link rel="stylesheet" href="plugins/animate.css/animate.min.css" />
-    <link rel="stylesheet" href="plugins/animsition/dist/css/animsition.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>plugins/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>plugins/slick-carousel/slick/slick.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>plugins/animate.css/animate.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>plugins/animsition/dist/css/animsition.min.css" />
 
     <!-- CSS Icons -->
     <!-- <link rel="stylesheet" href="css/themify-icons.css" /> -->
     <link rel="stylesheet" href="https://unpkg.com/@icon/themify-icons/themify-icons.css">
-    <link rel="stylesheet" href="plugins/font-awesome/css/font-awesome.min.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>plugins/font-awesome/css/font-awesome.min.css" />
 
     <!-- CSS Code HighLighter -->
-    <link rel="stylesheet" href="css/prettify.css" />
+    <link rel="stylesheet" href="<%= BASE_URL %>css/prettify.css" />
 
     <!-- CSS Theme -->
-    <link id="theme" rel="stylesheet" href="css/themes/theme-beige.min.css" />
+    <link id="theme" rel="stylesheet" href="<%= BASE_URL %>css/themes/theme-beige.min.css" />
 
         
   </head>
@@ -46,24 +46,26 @@
       <div id="body-overlay"></div>
     </div>
     <!-- JS Plugins -->
-    <script src="plugins/jquery/dist/jquery.min.js"></script>
-    <script src="plugins/tether/dist/js/tether.min.js"></script>
-    <script src="plugins/bootstrap/dist/js/bootstrap.min.js"></script>
-    <script src="plugins/slick-carousel/slick/slick.min.js"></script>
-    <script src="plugins/jquery.appear/jquery.appear.js"></script>
-    <script src="plugins/jquery.scrollto/jquery.scrollTo.min.js"></script>
-    <script src="plugins/jquery.localscroll/jquery.localScroll.min.js"></script>
-    <script src="plugins/jquery-validation/dist/jquery.validate.min.js"></script>
-    <script src="plugins/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.min.js"></script>
-    <script src="plugins/twitter-fetcher/js/twitterFetcher_min.js"></script>
-    <script src="plugins/skrollr/dist/skrollr.min.js"></script>
-    <script src="plugins/animsition/dist/js/animsition.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/jquery/dist/jquery.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/tether/dist/js/tether.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/bootstrap/dist/js/bootstrap.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/slick-carousel/slick/slick.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/jquery.appear/jquery.appear.js"></script>
+    <script src="<%= BASE_URL %>plugins/jquery.scrollto/jquery.scrollTo.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/jquery.localscroll/jquery.localScroll.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/jquery-validation/dist/jquery.validate.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/jquery.mb.ytplayer/dist/jquery.mb.YTPlayer.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/twitter-fetcher/js/twitterFetcher_min.js"></script>
+    <script src="<%= BASE_URL %>plugins/skrollr/dist/skrollr.min.js"></script>
+    <script src="<%= BASE_URL %>plugins/animsition/dist/js/animsition.min.js"></script>
 
     <!-- JS Google Map -->
     <script src="https://maps.googleapis.com/maps/api/js"></script>
 
     <!-- JS CodeHighlighter -->
-    <script src="js/prettify.js"></script>
+    <script src="<%= BASE_URL %>js/prettify.js"></script>
+
+    <script src="https://js.stripe.com/v3/"></script>
 
     <!-- Additional Initializations -->
     <script>
