--- a/shelter-in-plates/public/index.html
+++ b/shelter-in-plates/public/index.html
@@ -16,9 +16,9 @@
     <link rel="apple-touch-icon" sizes="120x120" href="<%= BASE_URL %>img/favicon_120x120.png">
     <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>img/favicon_152x152.png">
     
-    <meta property="og:title" content="Shelter-In-Plates" />
+    <meta property="og:title" content="Shelter-In-Plates: Help keep local restaurants alive while supporting health care professionals" />
     <meta property="og:image" content="https://www.shelter-in-plates.com/img/favicon_60x60.png" />
-    
+
     <!-- CSS Plugins -->
     <link rel="stylesheet" href="<%= BASE_URL %>plugins/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="<%= BASE_URL %>plugins/slick-carousel/slick/slick.css" />
