add a default opengraph description

--- a/shelter-in-plates/public/index.html
+++ b/shelter-in-plates/public/index.html
@@ -17,7 +17,8 @@
     <link rel="apple-touch-icon" sizes="152x152" href="<%= BASE_URL %>img/favicon_152x152.png">
     
     <meta property="og:title" content="Shelter-In-Plates: Help keep local restaurants alive while supporting health care professionals" />
-    <meta property="og:image" content="https://www.shelter-in-plates.com/img/favicon_60x60.png" />
+    <meta property="og:image" content="https://www.shelter-in-plates.com/img/favicon_152x152.png" />
+    <meta property="og:description" content="Buy a meal for a frontline health care worker from a local restaurant to show your appreciation for those helping us fight COVID-19 while supporting local, independent restaurants." />
 
     <!-- CSS Plugins -->
     <link rel="stylesheet" href="<%= BASE_URL %>plugins/bootstrap/dist/css/bootstrap.min.css" />
